fix: מסך ריק - תיקון .env ריק, ProtectedRoute, fallback טעינה
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>יומנטור</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div style="min-height:100vh;display:flex;align-items:center;justify-content:center;background:#EEF4F7;font-family:system-ui">
+        <p style="color:#2D2D2D">טוען...</p>
+      </div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
